--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ h2 {
 .task {
   width: 95%;
   height: 40px;
-  border-bottom: 1px solid rgba(0,0,0,0.08);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .task {
